objects/SVMXC__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Q3_Response__c</fullName>
        <description>Question #3 for the Regulatory Questions</description>
        <inlineHelpText>Question #3 for the Regulatory Questions</inlineHelpText>
        <label>Q3 Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Q3__c</fullName>
        <defaultValue>&quot;Is it related to possible failure of product labeling or/and packaging to meet any of its specifications?&quot;</defaultValue>
        <description>Question 3 if Complaint Box Checked or HSI Questions answered</description>
        <label>Q3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quote_Approved_Date_Time__c</fullName>
        <description>Date/Time that the quote was approved</description>
        <inlineHelpText>Date/Time that the quote was approved</inlineHelpText>
        <label>Quote Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quote_Rejected_Date_Time__c</fullName>
        <description>Date/Time that a quote was rejected</description>
        <inlineHelpText>Date/Time that a quote was rejected</inlineHelpText>
        <label>Quote Rejected Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quote_Rejection_Reason__c</fullName>
        <description>Denotes why a quote was rejected</description>
        <inlineHelpText>Denotes why a quote was rejected</inlineHelpText>
        <label>Quote Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quote_Sent_for_Approval__c</fullName>
        <description>Date/Time quote was sent for approval</description>
        <inlineHelpText>Date/Time quote was sent for approval</inlineHelpText>
        <label>Quote Sent for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quote_Valid_To_Date__c</fullName>
        <description>Date that the quote is valid to before a new quote will need to be generated</description>
        <inlineHelpText>Date that the quote is valid to before a new quote will need to be generated</inlineHelpText>
        <label>Quote Valid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Reason_for_Change__c</fullName>
        <description>Reason for Change</description>
        <inlineHelpText>Reason for Change</inlineHelpText>
        <label>Reason for Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Change</fullName>
                </value>
                <value>
                    <fullName>Customer Availability</fullName>
                </value>
                <value>
                    <fullName>Scheduling Conflict</fullName>
                </value>
                <value>
                    <fullName>Awaiting Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Reason_for_Discount__c</fullName>
        <description>This custom text field is used for adding Reason for Discounts being applied to the Service Estimate</description>
        <inlineHelpText>This custom text field is used for adding Reason for Discounts being applied to the Service Estimate</inlineHelpText>
        <label>Reason for Discount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Recommended_Tech_for_Reschedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a Technician needs to reject a WO but already has another Technician lined up to take the job, he can recommend that technician through this field.</description>
        <inlineHelpText>When a Technician needs to reject a WO but already has another Technician lined up to take the job, he can recommend that technician through this field.</inlineHelpText>
        <label>Recommended Technician for Reschedule</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Work Orders (Recommended Technician for Reschedule)</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Rejection_Reason__c</fullName>
        <description>Denotes the reason why the DMR was rejected</description>
        <inlineHelpText>Denotes the reason why the DMR was rejected</inlineHelpText>
        <label>DMR Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Time (Labour/Travel)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Labour or Travel  and Material</fullName>
                </value>
                <value>
                    <fullName>Incorrect Material</fullName>
                </value>
                <value>
                    <fullName>Incorrect Price</fullName>
                </value>
                <value>
                    <fullName>Wrong accounts/partners</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Other or Misc</fullName>
                </value>
                <value>
                    <fullName>Manager Approval Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Remote_Callback_Required__c</fullName>
        <label>Remote Callback Required?</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Requesting_Technician__c</fullName>
        <inlineHelpText>Capture technician name who is requesting service estimate.</inlineHelpText>
        <label>Requesting Technician</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ResultsAnalysisKey__c</fullName>
        <label>Results Analysis Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Revision_Reason__c</fullName>
        <description>Displays the Revision Reason of the Estimate in the Service Estimate Process</description>
        <inlineHelpText>Displays the Revision Reason of the Estimate in the Service Estimate Process</inlineHelpText>
        <label>Revision Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_ActivityType__c</fullName>
        <label>SAP Activity Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Activity_Status__c</fullName>
        <description>Part of the SAP User Status values.</description>
        <inlineHelpText>Part of the SAP User Status values.</inlineHelpText>
        <label>SAP Activity Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACW</fullName>
                    <label>ACW - Awaiting Customer Feedback</label>
                </value>
                <value>
                    <fullName>AFR</fullName>
                    <label>AFR - Awaiting FSR</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>AI - Awaiting INV, SR received</label>
                </value>
                <value>
                    <fullName>AISR</fullName>
                    <label>AISR - Awaiting SR and INV</label>
                </value>
                <value>
                    <fullName>AP</fullName>
                    <label>AP - Awaiting Parts</label>
                </value>
                <value>
                    <fullName>APO</fullName>
                    <label>APO - Awaiting Customer PO</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>AQ - Awaiting Vendor Quotation</label>
                </value>
                <value>
                    <fullName>ASR</fullName>
                    <label>ASR - Awaiting SR, INV received</label>
                </value>
                <value>
                    <fullName>AVPO</fullName>
                    <label>AVPO - Awaiting Vendor PO</label>
                </value>
                <value>
                    <fullName>DIR</fullName>
                    <label>DIR - Documents in review</label>
                </value>
                <value>
                    <fullName>SRA</fullName>
                    <label>SRA - Service Report Attached</label>
                </value>
                <value>
                    <fullName>SRAN</fullName>
                    <label>SRAN - SR attached no INV expected</label>
                </value>
                <value>
                    <fullName>TCON</fullName>
                    <label>TCON - Time confirmation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Maintenance_Plant__c</fullName>
        <description>The Maintenance Plant assigned to the Work Order in SAP. Only populated on Work Orders originating in SAP.</description>
        <inlineHelpText>The Maintenance Plant assigned to the Work Order in SAP. Only populated on Work Orders originating in SAP.</inlineHelpText>
        <label>SAP Maintenance Plant</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Notification_ID__c</fullName>
        <label>SAP Notification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_OrderType__c</fullName>
        <label>SAP Order Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Order_Status__c</fullName>
        <description>Part of the SAP User Status values.</description>
        <inlineHelpText>Part of the SAP User Status values.</inlineHelpText>
        <label>SAP Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPEN</fullName>
                    <label>OPEN - Not Scheduled to SE</label>
                </value>
                <value>
                    <fullName>SCH</fullName>
                    <label>SCH - Call Scheduled for SE</label>
                </value>
                <value>
                    <fullName>WC</fullName>
                    <label>WC - Work complete</label>
                </value>
                <value>
                    <fullName>APW</fullName>
                    <label>APW - Awaiting paper work</label>
                </value>
                <value>
                    <fullName>ESC</fullName>
                    <label>ESC - Escalate missing paperwork</label>
                </value>
                <value>
                    <fullName>DISP</fullName>
                    <label>DISP - Dispute</label>
                </value>
                <value>
                    <fullName>EC</fullName>
                    <label>EC - Entry complete, ready to pay</label>
                </value>
                <value>
                    <fullName>CB</fullName>
                    <label>CB - Charge Back</label>
                </value>
                <value>
                    <fullName>CMPT</fullName>
                    <label>CMPT - Complete</label>
                </value>
                <value>
                    <fullName>CANC</fullName>
                    <label>CANC - Cancelled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SystemStatus__c</fullName>
        <label>SAP System Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CLSD</fullName>
                </value>
                <value>
                    <fullName>CRTD</fullName>
                </value>
                <value>
                    <fullName>REL</fullName>
                </value>
                <value>
                    <fullName>TECO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Work_Center__c</fullName>
        <description>The Work Center assigned in SAP.  Only populated on Work Orders that originated in SAP.</description>
        <inlineHelpText>The Work Center assigned in SAP.  Only populated on Work Orders that originated in SAP.</inlineHelpText>
        <label>SAP Work Center</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SLA_Terms_Notes__c</fullName>
        <description>Notes related to the SLA Terms automation</description>
        <inlineHelpText>Notes related to the SLA Terms automation</inlineHelpText>
        <label>SLA Terms Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrderLineNumber__c</fullName>
        <description>Sales Order Line Number</description>
        <inlineHelpText>Sales Order Line Number</inlineHelpText>
        <label>Sales Order Line Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrderNumber__c</fullName>
        <description>Sales Order Number</description>
        <inlineHelpText>Sales Order Number</inlineHelpText>
        <label>Sales Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrg__c</fullName>
        <description>Sales Org of the Customer&apos;s Location</description>
        <inlineHelpText>Sales Org of the Customer&apos;s Location</inlineHelpText>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Schedule_Date_Flexibility_1__c</fullName>
        <formula>IF( 
SVMXC__Component__r.SMAX_PS_Schedule_Date_Flexibility_1__c &gt; 0, 

DATEVALUE(SVMXC__FirstScheduledDateTime__c) +SVMXC__Component__r.SMAX_PS_Schedule_Date_Flexibility_1__c , 

DATEVALUE(SVMXC__FirstScheduledDateTime__c) + 30 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Date Flexibility 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Schedule_Date_Flexibility_2__c</fullName>
        <formula>SVMXC__FirstScheduledDateTime__c + SVMXC__Component__r.SMAX_PS_Schedule_Date_Flexibility_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Date Flexibility 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Schedule_Date_Flexibility_Over__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval to override the flexibility date limits for scheduling the PM</description>
        <label>Schedule Date Flexibility Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Scheduled_Month__c</fullName>
        <description>Month of the Work Order Scheduled Date</description>
        <formula>CASE(MONTH(SVMXC__Scheduled_Date__c),1,&apos;January&apos;,2,&apos;February&apos;,3,&apos;March&apos;,4,&apos;April&apos;,5,&apos;May&apos;,6,&apos;June&apos;, 7,&apos;July&apos;,8,&apos;August&apos;,9,&apos;September&apos;,10,&apos;October&apos;,11,&apos;November&apos;,12,&apos;December&apos;,&apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month of the Work Order Scheduled Date</inlineHelpText>
        <label>Scheduled Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Send_Estimate_Approval_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends estimate approval request</description>
        <inlineHelpText>Sends estimate approval request</inlineHelpText>
        <label>Send Estimate Approval Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Send_FS_Adjustment_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends Field Service Adjustment Approval request</description>
        <inlineHelpText>Sends Field Service Adjustment Approval request</inlineHelpText>
        <label>Send FS Adjustment Approval Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a survey should be sent out to the Contact on the Work Order.</description>
        <inlineHelpText>Indicates whether a survey should be sent out to the Contact on the Work Order.</inlineHelpText>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Send_to_Technical_Support_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers workflow rule to update the work order to the technical support queue</description>
        <inlineHelpText>Triggers workflow rule to update the work order to the technical support queue</inlineHelpText>
        <label>Send to Technical Support Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sent_to_TS_Queue_Date_Time__c</fullName>
        <description>Denotes the date time that the work order was sent to the technical support queue</description>
        <inlineHelpText>Denotes the date time that the work order was sent to the technical support queue</inlineHelpText>
        <label>Sent to TS Queue Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServicePrimaryUser__c</fullName>
        <description>Service Primary User</description>
        <inlineHelpText>Service Primary User</inlineHelpText>
        <label>Service Primary User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Contract_End_Date__c</fullName>
        <formula>SVMXC__Service_Contract__r.SVMXC__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Contract_Start_Date__c</fullName>
        <formula>SVMXC__Service_Contract__r.SVMXC__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SettlementOrderType__c</fullName>
        <label>Settlement Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CTR</fullName>
                    <label>Cost Center</label>
                </value>
                <value>
                    <fullName>ORD</fullName>
                    <label>Internal Order</label>
                </value>
                <value>
                    <fullName>SDI</fullName>
                    <label>Sales Document/Item</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SettlementReciever__c</fullName>
        <label>Settlement Receiver</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Settlement_Receiver_Length__c</fullName>
        <description>Length of settlement receiver field</description>
        <formula>LEN( SMAX_PS_SettlementReciever__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Length of settlement receiver field</inlineHelpText>
        <label>Settlement Receiver Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Ship To Customer)</relationshipLabel>
        <relationshipName>WorkOrderShipTos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SubmitAllLines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit All Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sum_of_Labor__c</fullName>
        <description>This custom field sums up all of the Line Qty Labor in the Work Details and is used for reporting purposes</description>
        <inlineHelpText>This custom field sums up all of the Line Qty Labor in the Work Details and is used for reporting purposes</inlineHelpText>
        <label>Total of Labor Hours</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SVMXC__Actual_Quantity2__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Type__c</field>
            <operation>equals</operation>
            <value>Labor</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Usage/Consumption</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Is_Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sum_of_Travel_Amount__c</fullName>
        <description>Total price sum for all travel lines</description>
        <inlineHelpText>Total price sum for all travel lines</inlineHelpText>
        <label>Sum of Travel Amount</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SMAX_PS_CalculatedLinePrice__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Usage/Consumption</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Type__c</field>
            <operation>equals</operation>
            <value>Travel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Is_Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sum_of_Travel_Hours__c</fullName>
        <description>Sum of travel hours</description>
        <inlineHelpText>Sum of travel hours</inlineHelpText>
        <label>Sum of Travel Hours</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SVMXC__Actual_Quantity2__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Is_Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Usage/Consumption</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Type__c</field>
            <operation>equals</operation>
            <value>Travel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Super_Business_Unit__c</fullName>
        <description>The Super Business Unit of the Installed Product&apos;s underlying Product.</description>
        <inlineHelpText>The Super Business Unit of the Installed Product&apos;s underlying Product.</inlineHelpText>
        <label>Super Business Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Survey_Sent_Date_Time__c</fullName>
        <description>The date and time the survey was sent.</description>
        <inlineHelpText>The date and time the survey was sent.</inlineHelpText>
        <label>Survey Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Survey_URL__c</fullName>
        <description>The URL to the survey to be included in the email to the customer asking them to take the survey.</description>
        <inlineHelpText>The URL to the survey to be included in the email to the customer asking them to take the survey.</inlineHelpText>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_System_ID__c</fullName>
        <label>System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TPV_Chargeback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote that the work order has third party vendor chargebacks</description>
        <inlineHelpText>Used to denote that the work order has third party vendor chargebacks</inlineHelpText>
        <label>TPV Chargeback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TPV_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phase 0.1 release. Refer to SVMXCFG-558 for request detail.</description>
        <inlineHelpText>Indicates that TPV follow-up is required on this work order. This field is not integrated back to SAP.</inlineHelpText>
        <label>TPV Follow-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TPV_Request_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, will initiate a Workflow to send out an Email Alert to the TPV requesting PO information.</description>
        <inlineHelpText>When checked, will initiate a Workflow to send out an Email Alert to the TPV requesting PO information.</inlineHelpText>
        <label>TPV Request PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tech_Expertise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Expertise (this will be populated by code to contain Expertise record (matching skill on WO) of Tech assigned the WO</description>
        <label>Tech Expertise</label>
        <referenceTo>SVMXC__Service_Group_Skills__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tech_Support_Email__c</fullName>
        <description>Used to allow Tech Support person to enter their email if they want to be notified when WO is closed.</description>
        <label>Tech Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technical_ID_Number__c</fullName>
        <inlineHelpText>OneSource asset tag number.</inlineHelpText>
        <label>Technical Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TechnicianSalesOrg__c</fullName>
        <description>Used to capture the assigned technician storage location sales org.</description>
        <inlineHelpText>Assigned technician storage location sales org.</inlineHelpText>
        <label>Technician Sales Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Manager_Email__c</fullName>
        <description>Technician Manager Email Address</description>
        <inlineHelpText>Technician Manager email address</inlineHelpText>
        <label>Technician Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Manager__c</fullName>
        <formula>SVMXC__Group_Member__r.SVMX_PS_Technician_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Reassignment_DateTime__c</fullName>
        <description>Denotes the date/time that a technician was reassigned on the Work Order</description>
        <inlineHelpText>Denotes the date/time that a technician was reassigned on the Work Order</inlineHelpText>
        <label>Technician Reassignment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Role__c</fullName>
        <description>References the role field on the technician record</description>
        <formula>TEXT(SVMXC__Group_Member__r.SVMXC__Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>References the role field on the technician record</inlineHelpText>
        <label>Technician Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Test_to_Box_FORMULA__c</fullName>
        <formula>HYPERLINK(&quot;boxopendirect://folder?=14550569359&quot;,&quot;Box Doc&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test to Box FORMULA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Test_to_Box_doc__c</fullName>
        <description>Testing to see if link to BOx can be done form FSA</description>
        <inlineHelpText>Testing to see if link to BOx can be done form FSA</inlineHelpText>
        <label>Test to Box doc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TotalCalculatedAmount__c</fullName>
        <description>Rollup Summary field showing the total Calculated amount of all Usage/Consumption Lines</description>
        <inlineHelpText>Rollup Summary field showing the total Calculated amount of all Usage/Consumption Lines</inlineHelpText>
        <label>Total Calculated Amount</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SMAX_PS_CalculatedLinePrice__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Usage/Consumption</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TotalEstimateAmount__c</fullName>
        <description>Rollup Summary field showing the total Calculated amount of all Estimate Lines</description>
        <inlineHelpText>Rollup Summary field showing the total Calculated amount of all Estimate Lines</inlineHelpText>
        <label>Total Estimate Amount</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SMAX_PS_CalculatedLinePrice__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Estimate</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>